# course_report

./: CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: release-please.yml
configs/: matplotlib.mplstyle
dsa_report/: tools.py
nbconvert_template/coursereport/: base.tex.j2  conf.json  document_contents.tex.j2  index.tex.j2  style_jupyter.tex.j2
notebook/: bi_report_template.ipynb  bib.bib  bireport.ipynb  dsareport.ipynb  remove_doi.py  report_template.ipynb
